--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "NODE_ENV=development dotenv -e .env.development node src/server.js",
+    "staging": "NODE_ENV=staging dotenv -e .env.staging node src/server.js",
+    "prod": "NODE_ENV=production dotenv -e .env.production node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,12 +16,17 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.21.1"
   },
   "type": "module"
